--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ gdown==5.2.0
 gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.0.3
+gyp==0.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -166,6 +167,7 @@ pipreqs==0.5.0
 pipx==1.0.0
 platformdirs==4.2.2
 playwright==1.46.0
+plotly==5.24.1
 pluggy==1.5.0
 ply==3.11
 prometheus_client==0.20.0
